# HumanGL

./: CMakeLists.txt  README.md
HumanGL/: CMakeLists.txt
HumanGL/src/: Animation.cpp  Animation.hpp  main.cpp  main_2.txt
core/: CMakeLists.txt
core/include/: Batch.hpp  Camera.hpp  Color.hpp  Config.hpp  Core.hpp  Device.hpp  File.hpp  Gui.hpp  Math.hpp  Mesh.hpp
core/src/: Batch.cpp  Device.cpp  File.cpp  Gui.cpp  Input.cpp  Math.cpp  Mesh.cpp  Pixemap.cpp  Texture.cpp
