
project(HumanGL)
cmake_policy(SET CMP0072 NEW)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")


if (WIN32)
    set(LIBS_DIR "E:/windows/libs")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}   -D_CRT_SECURE_NO_WARNINGS")
    if (MSVC)
        if(CMAKE_BUILD_TYPE MATCHES Debug)
            add_compile_options(/RTC1 /Od /Zi)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fsanitize=address")
        endif()     
    endif()

endif() 

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

add_compile_options(
    -Wall 
)


file(GLOB SOURCES "src/*.cpp")
add_executable(HumanGL  ${SOURCES})

if(CMAKE_BUILD_TYPE MATCHES Debug)

    if (UNIX)
        #target_compile_options(HumanGL PRIVATE -fsanitize=address -fsanitize=undefined -fsanitize=leak -g  -D_DEBUG )
        #target_link_options(HumanGL PRIVATE -fsanitize=address -fsanitize=undefined -fsanitize=leak -g  -D_DEBUG) 
    endif()


elseif(CMAKE_BUILD_TYPE MATCHES Release)
    target_compile_options(HumanGL PRIVATE -O3   -DNDEBUG )
    target_link_options(HumanGL PRIVATE -O3   -DNDEBUG )
endif()

find_package(OpenGL REQUIRED)


if (UNIX)
    target_link_libraries(HumanGL
    PRIVATE
        core
        m
        SDL3::SDL3
        OpenGL::GL
)
endif()
